[project]
name = "mimo-multimodal-mcp"
version = "0.2.1"
description = "MCP server for Xiaomi MiMo multimodal understanding (image, audio, video)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mimo-multimodal-mcp = "mimo_multimodal_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimo_multimodal_mcp"]
